--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "panel"]
 	path = app/panel
 	url = https://github.com/getkirby/panel.git
+[submodule "app/site/plugins/architect"]
+	path = app/site/plugins/architect
+	url = https://github.com/AugustMiller/kirby-architect.git
