Make alignment required

--- a/app/site/blueprints/monster.yml
+++ b/app/site/blueprints/monster.yml
@@ -64,6 +64,7 @@ fields:
       chaotic-good: Chaotic Good
       chaotic-neutral: Chaotic Neutral
       chaotic-evil: Chaotic Evil
+    required: true
     width: 1/4
 
   description:
