Legendary actions no longer have to be added to `description`
Still just a free-text area, given that additional lore often goes
along with the stipulations and legendary actions.

--- a/app/site/blueprints/monster.yml
+++ b/app/site/blueprints/monster.yml
@@ -272,3 +272,7 @@ fields:
     entry: >
       <h5>{{name}}</h5>
       {{description}}
+
+  legendary_actions:
+    label: Legendary Actions
+    type: textarea
